Selection and Cleaning

--- a/notebooks/nb1_selection.ipynb
+++ b/notebooks/nb1_selection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selecionando dados"
+    "## Seleção dos dados (Data Selection)"
    ]
   },
   {
