--- a/notebooks/nb1_selection.ipynb
+++ b/notebooks/nb1_selection.ipynb
@@ -65,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Danielle (PROF)\\AppData\\Local\\Temp\\ipykernel_9440\\297088659.py:1: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_17728\\297088659.py:1: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  efa_2021 = pd.read_csv('../datasets/original/eficiencia/efa_2021.csv', sep=';', on_bad_lines='skip')\n"
      ]
     }
@@ -75,6 +75,243 @@
     "efa_2020 = pd.read_csv('../datasets/original/eficiencia/efa_2020.csv', sep=';', on_bad_lines='skip')\n",
     "efa_2019 = pd.read_csv('../datasets/original/eficiencia/efa_2019.csv', sep=';', on_bad_lines='skip')\n",
     "efa_2018 = pd.read_csv('../datasets/original/eficiencia/efa_2018.csv', sep=';', on_bad_lines='skip', encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Carga Horaria</th>\n",
+       "      <th>Carga Horaria Mínima</th>\n",
+       "      <th>Categoria da Situação</th>\n",
+       "      <th>Co Inst</th>\n",
+       "      <th>Cod Unidade</th>\n",
+       "      <th>Cor / Raça</th>\n",
+       "      <th>Código da Matricula</th>\n",
+       "      <th>Código da Unidade de Ensino - SISTEC</th>\n",
+       "      <th>Código do Ciclo Matricula</th>\n",
+       "      <th>Código do Município com DV</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Vagas Ofertadas</th>\n",
+       "      <th>Vagas Regulares AC</th>\n",
+       "      <th>Vagas Regulares l1</th>\n",
+       "      <th>Vagas Regulares l10</th>\n",
+       "      <th>Vagas Regulares l13</th>\n",
+       "      <th>Vagas Regulares l14</th>\n",
+       "      <th>Vagas Regulares l2</th>\n",
+       "      <th>Vagas Regulares l5</th>\n",
+       "      <th>Vagas Regulares l6</th>\n",
+       "      <th>Vagas Regulares l9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1523341</th>\n",
+       "      <td>20</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>Concluintes</td>\n",
+       "      <td>26420</td>\n",
+       "      <td>358</td>\n",
+       "      <td>Não declarada</td>\n",
+       "      <td>96122031</td>\n",
+       "      <td>14080.0</td>\n",
+       "      <td>2715783</td>\n",
+       "      <td>4313904</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523342</th>\n",
+       "      <td>20</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>Concluintes</td>\n",
+       "      <td>26420</td>\n",
+       "      <td>358</td>\n",
+       "      <td>Não declarada</td>\n",
+       "      <td>96122037</td>\n",
+       "      <td>14080.0</td>\n",
+       "      <td>2715783</td>\n",
+       "      <td>4313904</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523343</th>\n",
+       "      <td>160</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>Evadidos</td>\n",
+       "      <td>26436</td>\n",
+       "      <td>369</td>\n",
+       "      <td>Parda</td>\n",
+       "      <td>95091099</td>\n",
+       "      <td>2931.0</td>\n",
+       "      <td>2707702</td>\n",
+       "      <td>4314100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523344</th>\n",
+       "      <td>200</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>Evadidos</td>\n",
+       "      <td>26436</td>\n",
+       "      <td>137</td>\n",
+       "      <td>Parda</td>\n",
+       "      <td>95087323</td>\n",
+       "      <td>13828.0</td>\n",
+       "      <td>2707682</td>\n",
+       "      <td>4303509</td>\n",
+       "      <td>...</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1523345</th>\n",
+       "      <td>180</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>Evadidos</td>\n",
+       "      <td>26436</td>\n",
+       "      <td>6002</td>\n",
+       "      <td>Preta</td>\n",
+       "      <td>95103817</td>\n",
+       "      <td>45430.0</td>\n",
+       "      <td>2707731</td>\n",
+       "      <td>4314407</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1265.0</td>\n",
+       "      <td>1265.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Carga Horaria  Carga Horaria Mínima Categoria da Situação  Co Inst  \\\n",
+       "1523341             20                 160.0           Concluintes    26420   \n",
+       "1523342             20                 160.0           Concluintes    26420   \n",
+       "1523343            160                 160.0              Evadidos    26436   \n",
+       "1523344            200                 200.0              Evadidos    26436   \n",
+       "1523345            180                 160.0              Evadidos    26436   \n",
+       "\n",
+       "         Cod Unidade     Cor / Raça  Código da Matricula  \\\n",
+       "1523341          358  Não declarada             96122031   \n",
+       "1523342          358  Não declarada             96122037   \n",
+       "1523343          369          Parda             95091099   \n",
+       "1523344          137          Parda             95087323   \n",
+       "1523345         6002          Preta             95103817   \n",
+       "\n",
+       "         Código da Unidade de Ensino - SISTEC  Código do Ciclo Matricula  \\\n",
+       "1523341                               14080.0                    2715783   \n",
+       "1523342                               14080.0                    2715783   \n",
+       "1523343                                2931.0                    2707702   \n",
+       "1523344                               13828.0                    2707682   \n",
+       "1523345                               45430.0                    2707731   \n",
+       "\n",
+       "         Código do Município com DV  ... Vagas Ofertadas Vagas Regulares AC  \\\n",
+       "1523341                     4313904  ...            37.0               37.0   \n",
+       "1523342                     4313904  ...            37.0               37.0   \n",
+       "1523343                     4314100  ...            59.0               59.0   \n",
+       "1523344                     4303509  ...           112.0              112.0   \n",
+       "1523345                     4314407  ...          1265.0             1265.0   \n",
+       "\n",
+       "        Vagas Regulares l1 Vagas Regulares l10 Vagas Regulares l13  \\\n",
+       "1523341                0.0                 0.0                 0.0   \n",
+       "1523342                0.0                 0.0                 0.0   \n",
+       "1523343                0.0                 0.0                 0.0   \n",
+       "1523344                0.0                 0.0                 0.0   \n",
+       "1523345                0.0                 0.0                 0.0   \n",
+       "\n",
+       "        Vagas Regulares l14 Vagas Regulares l2  Vagas Regulares l5  \\\n",
+       "1523341                 0.0                0.0                 0.0   \n",
+       "1523342                 0.0                0.0                 0.0   \n",
+       "1523343                 0.0                0.0                 0.0   \n",
+       "1523344                 0.0                0.0                 0.0   \n",
+       "1523345                 0.0                0.0                 0.0   \n",
+       "\n",
+       "        Vagas Regulares l6 Vagas Regulares l9  \n",
+       "1523341                0.0                0.0  \n",
+       "1523342                0.0                0.0  \n",
+       "1523343                0.0                0.0  \n",
+       "1523344                0.0                0.0  \n",
+       "1523345                0.0                0.0  \n",
+       "\n",
+       "[5 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_2021.tail()"
    ]
   },
   {
@@ -104,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
